NoTicket: Removed about 200 or so warnings
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10367 37aeb1de-b14b-0410-9a0e-82b28170d228